# rosace

./: .gitignore  Cargo.toml  README.md
docs/: NAMING.md  (+11 more)
rosace/: Cargo.toml
rosace-animate/: Cargo.toml
rosace-animate/src/: animation_hook.rs  controller.rs  lerp.rs  lib.rs  spring.rs  spring_hook.rs
rosace-cli/: Cargo.toml
rosace-cli/src/: color.rs  main.rs  test_support.rs
rosace-cli/src/commands/: analyze.rs  build.rs  bundle_id.rs  dev.rs  devices.rs  doctor.rs  hot_ws.rs  icons.rs  mod.rs  new.rs  package.rs  run.rs  snapshot.rs  tier2.rs  workspace.rs
rosace-compositor/: Cargo.toml
rosace-compositor/src/: lib.rs  shader_quad_header.wgsl
rosace-devtools/: Cargo.toml
rosace-devtools/src/: dev_console.rs  devtools_ui.rs  element_inspector.rs  frame_profiler.rs  lib.rs  trace_panel.rs  trace_viewer.rs
rosace-examples/: Cargo.toml
rosace-examples/demo_app/: .gitignore  Cargo.toml  README.md  rsc.toml
rosace-examples/demo_app/android/: settings.gradle.kts
rosace-examples/demo_app/android/app/: build.gradle.kts
rosace-examples/demo_app/examples/: seo_extract.rs
rosace-examples/demo_app/ios/: Info.plist
rosace-examples/demo_app/ios/App/: AppDelegate.swift  EngineViewController.swift
rosace-examples/demo_app/ios/App.xcodeproj/: project.pbxproj
rosace-examples/demo_app/linux/: app.desktop
rosace-examples/demo_app/macos/: Info.plist  entitlements.plist
rosace-examples/demo_app/src/: app.rs  ffi.rs  lib.rs  main.rs  theme.rs
rosace-examples/demo_app/src/screens/: buttons.rs  counter.rs  gallery.rs  hero_detail.rs  home.rs  inputs.rs  mod.rs  overlays.rs  scroll_demo.rs
rosace-examples/demo_app/web/: index.html  site.webmanifest
rosace-examples/demo_app/windows/: app.manifest
rosace-examples/examples/: web.rs
rosace-examples/my_app/: Cargo.toml  README.md  rsc.toml
rosace-examples/my_app/examples/: seo_extract.rs
rosace-examples/my_app/ios/: Info.plist
rosace-examples/my_app/ios/App/: AppDelegate.swift  EngineViewController.swift  SceneDelegate.swift
rosace-examples/my_app/ios/App.xcodeproj/: project.pbxproj
rosace-examples/my_app/macos/: Info.plist  icon.icns
rosace-examples/my_app/src/: app.rs  ffi.rs  lib.rs  main.rs  theme.rs
rosace-examples/my_app/web/: index.html
rosace-examples/test-phase3-app/: Cargo.toml
rosace-examples/test-phase3-app/src/: main.rs
rosace-ffi/: Cargo.toml
rosace-ffi/examples/: android_stub.rs  ios_stub.rs
rosace-ffi/include/: rsc_engine.h  tzr_engine.h
rosace-ffi/src/: android.rs  capability.rs  engine.rs  event.rs  lib.rs  surface.rs
rosace-macros/: Cargo.toml
rosace-macros/src/: lib.rs  shader_uniforms.rs  state.rs  view.rs
rosace-nav/: Cargo.toml
rosace-nav/src/: guard.rs  lib.rs  navigator.rs  screen_nav.rs  stack.rs  transition.rs
rosace-net/: Cargo.toml
rosace-net/src/: client.rs  http.rs  lib.rs  load_state.rs  loader.rs  network_status.rs  query.rs  remote_image.rs
rosace-platform/: Cargo.toml
rosace-platform/src/: app.rs  event.rs  scroll_layer.rs  web.rs  web_seo_sync.rs
rosace-render/: Cargo.toml
rosace-render/src/: canvas.rs  draw_command.rs  font.rs  gpu_shapes.rs  image.rs  lib.rs  picture.rs
rosace-scroll/: Cargo.toml
rosace-scroll/src/: controller.rs  lib.rs  physics.rs  scroll_view.rs  scrollbar.rs
rosace-shader/: Cargo.toml
rosace-shader/src/: builtin.rs  lib.rs  material.rs  materials.rs
rosace-shaping/: Cargo.toml
rosace-shaping/src/: engine.rs  fallback.rs  glyph.rs  lib.rs  pipeline.rs  script.rs
rosace-storage/: Cargo.toml
rosace-storage/src/: lib.rs
rosace-test-utils/: Cargo.toml
rosace-test-utils/src/: env.rs  eventsim.rs  lib.rs  snapshot.rs
rosace-text/: Cargo.toml
rosace-text/src/: cursor.rs  direction.rs  layout.rs  lib.rs  metrics.rs  rich_text.rs  span.rs
rosace-thirdparty-material-test/: Cargo.toml
rosace-thirdparty-material-test/src/: lib.rs
rosace-view-syntax/: Cargo.toml
rosace-view-syntax/src/: lib.rs
rosace-web-seo/: Cargo.toml
rosace-web-seo/src/: lib.rs
rosace-widgets/: Cargo.toml
rosace-widgets/assets/: LICENSE-MaterialSymbols.txt  MaterialSymbolsOutlined.codepoints
rosace-widgets/src/: image.rs  lib.rs  prelude.rs
rosace-widgets/src/template/: descriptor.rs  diff.rs  inflate.rs  mod.rs  parse.rs  registry.rs  reload.rs  swap.rs
rosace-widgets/src/tree/: app.rs  app_bar.rs  aspect_ratio.rs  avatar.rs  badge.rs  bottom_nav.rs  button.rs  card.rs  carousel.rs  checkbox.rs  chip.rs  circular_progress.rs  column.rs  container.rs  custom_paint.rs  data_table.rs  date_picker.rs  dialog.rs  divider.rs  drawer.rs  dropdown.rs  expander.rs  fab.rs  focus_api.rs  grid.rs  hero.rs  hero_tag.rs  icon.rs  image.rs  interactive_viewer.rs  list_tile.rs  list_view.rs  material.rs  menu.rs  mod.rs  nav_rail.rs  overlay.rs  overlay_api.rs  padding.rs  positioned.rs  (+34 more)
rosace-ws/: Cargo.toml
rosace-ws/src/: client.rs  hook.rs  lib.rs  stream.rs
rosace/examples/: picker_demo.rs
rosace/src/: dev_host.rs  dev_reload.rs  engine.rs  lib.rs
rosace/tests/: view_positional.rs  view_template.rs
tezzera-animate/: Cargo.toml
tezzera-animate/src/: animation_hook.rs  clock.rs  controller.rs  easing.rs  keyframe.rs  lib.rs  spring.rs  spring_hook.rs  tween.rs
tezzera-cli/: Cargo.toml
tezzera-cli/src/: color.rs  main.rs  test_support.rs
tezzera-cli/src/commands/: analyze.rs  build.rs  bundle_id.rs  dev.rs  devices.rs  doctor.rs  icons.rs  mod.rs  new.rs  package.rs  run.rs  snapshot.rs  workspace.rs
tezzera-examples/: Cargo.toml
tezzera-examples/examples/: web.rs
tezzera-examples/test-phase3-app/: Cargo.toml
tezzera-examples/test-phase3-app/src/: main.rs
tezzera-ffi/: Cargo.toml
tezzera-ffi/examples/: android_stub.rs  ios_stub.rs
tezzera-ffi/include/: tzr_engine.h
tezzera-ffi/src/: android.rs  capability.rs  engine.rs  event.rs  lib.rs  surface.rs
tezzera-nav/: Cargo.toml
tezzera-nav/src/: history.rs  lib.rs  route.rs  screen_nav.rs  stack.rs  transition.rs
tezzera-platform/: Cargo.toml
tezzera-platform/src/: app.rs  event.rs  lib.rs  scroll_layer.rs  web.rs  web_seo_sync.rs
(+423 files in other folders)
