[workspace]
members = [
    "tezzera-macros",
    "tezzera-trace",
    "tezzera-core",
    "tezzera-state",
    "tezzera-layout",
    "tezzera-render",
    "tezzera-theme",
    "tezzera-widgets",
    "tezzera-cli",
    "tezzera-examples",
    "tezzera-platform",
    "tezzera-animate",
    "tezzera-scroll",
    "tezzera-nav",
    "tezzera-nav-anim",
    "tezzera-hot-reload",
    "tezzera-devtools",
    "tezzera-forms",
    "tezzera-a11y",
    "tezzera-gesture",
    "tezzera-net",
    "tezzera-text",
    "tezzera-i18n",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TEZZERA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tezzera-ui/tezzera"
