[workspace]
members = [
    "tezzera",
    "tezzera-macros",
    "tezzera-style",
    "tezzera-trace",
    "tezzera-core",
    "tezzera-state",
    "tezzera-layout",
    "tezzera-render",
    "tezzera-theme",
    "tezzera-widgets",
    "tezzera-cli",
    "tezzera-examples",
    "tezzera-platform",
    "tezzera-anim",
    "tezzera-animate",
    "tezzera-scroll",
    "tezzera-nav",
    "tezzera-nav-anim",
    "tezzera-hot-reload",
    "tezzera-devtools",
    "tezzera-forms",
    "tezzera-a11y",
    "tezzera-gesture",
    "tezzera-net",
    "tezzera-text",
    "tezzera-shaping",
    "tezzera-bidi",
    "tezzera-i18n",
    "tezzera-clipboard",
    "tezzera-ws",
    "tezzera-ime",
    "tezzera-media",
    "tezzera-test-utils",
    "tezzera-compositor",
    "tezzera-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TEZZERA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tezzera-ui/tezzera"
