[workspace]
members = [
    "rosace",
    "rosace-macros",
    "rosace-style",
    "rosace-trace",
    "rosace-core",
    "rosace-state",
    "rosace-layout",
    "rosace-render",
    "rosace-theme",
    "rosace-widgets",
    "rosace-cli",
    "rosace-examples",
    "rosace-platform",
    "rosace-anim",
    "rosace-animate",
    "rosace-scroll",
    "rosace-nav",
    "rosace-nav-anim",
    "rosace-hot-reload",
    "rosace-devtools",
    "rosace-forms",
    "rosace-a11y",
    "rosace-gesture",
    "rosace-net",
    "rosace-text",
    "rosace-shaping",
    "rosace-bidi",
    "rosace-i18n",
    "rosace-clipboard",
    "rosace-ws",
    "rosace-ime",
    "rosace-media",
    "rosace-test-utils",
    "rosace-compositor",
    "rosace-ffi",
    "rosace-web-seo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ROSACE Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rosace-ui/rosace"
