[package]
name = "rosace-devtools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rosace-core  = { path = "../rosace-core" }
rosace-state = { path = "../rosace-state" }
rosace-trace = { path = "../rosace-trace" }
