[package]
name = "rosace-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[[bin]]
name = "app_showcase"
path = "src/bin/app_showcase.rs"

[[bin]]
name = "animated_counter"
path = "src/bin/animated_counter.rs"

# Web (wasm) MVP entry — cdylib so wasm-bindgen can generate JS glue.
[[example]]
name = "web"
path = "examples/web.rs"
crate-type = ["cdylib"]

[dependencies]
rosace         = { path = "../rosace" }
rosace-animate = { path = "../rosace-animate" }
rosace-state   = { path = "../rosace-state" }
env_logger      = "0.11"
wasm-bindgen    = "0.2"
