[package]
name = "rosace-ffi"
description = "Native-host FFI boundary (D106 Phase 24 Step 1) — lets a Swift/Kotlin host drive the ROSACE engine directly, without winit owning the app lifecycle."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Dev hot reload (Tier 1) on mobile: start the socket transport in Engine::init.
rsc-hot = ["rosace/rsc-hot"]

[dependencies]
rosace         = { path = "../rosace" }
rosace-core    = { path = "../rosace-core" }
rosace-platform = { path = "../rosace-platform" }
rosace-render  = { path = "../rosace-render" }
rosace-theme   = { path = "../rosace-theme" }
rosace-state   = { path = "../rosace-state" }
rosace-compositor = { path = "../rosace-compositor" }
rosace-trace   = { path = "../rosace-trace" }
# Only for the `wgpu::rwh` re-export of `raw-window-handle` — pinned to the
# same version as `rosace-compositor` so `RawSurface` satisfies
# `GpuPresenter::new`'s bound without a second raw-window-handle in the tree.
wgpu = "24"

# Android only (D106 Phase 24 Step 3): a Kotlin host calls into Rust via JNI,
# not a plain C ABI like iOS — `jni` gives safe `JNIEnv`/`JObject` wrappers,
# `ndk-sys` gives the raw `ANativeWindow_fromSurface`/`_release` bindings
# needed to turn the JNI `Surface` object handed across into the same
# `RawSurface::from_native_window` pointer iOS's `CAMetalLayer*` path already
# uses (see `android.rs`). New dependencies, approved as part of Step 3 —
# `jni` is the de facto standard crate for this (used by `winit`/`wgpu`'s own
# Android backends); there's no real alternative to weigh.
[target.'cfg(target_os = "android")'.dependencies]
jni     = "0.21"
ndk-sys = "0.6"

[[example]]
name = "ios_stub"
crate-type = ["staticlib"]

[[example]]
name = "android_stub"
crate-type = ["cdylib"]
