[package]
name = "rosace-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
web-time           = "1"
rosace-animate    = { path = "../rosace-animate" }
rosace-compositor = { path = "../rosace-compositor" }
rosace-core       = { path = "../rosace-core" }
rosace-render     = { path = "../rosace-render" }
rosace-shader     = { path = "../rosace-shader" }
rosace-state      = { path = "../rosace-state" }
rosace-trace      = { path = "../rosace-trace" }
log                = "0.4"
winit              = "0.30"
softbuffer         = "0.4"

# Android (D106 Phase 24 Step 3): winit hard-errors on target_os = "android"
# unless one of its android-activity backend features is picked, even though
# rosace-ffi's JNI-driven Android path never runs winit's own event loop —
# winit is still a transitive dependency for the types rosace-ffi/
# rosace-platform share, so it must compile cleanly for the target
# regardless. "native-activity" (not "game-activity") — lighter weight, no
# Google Play Games SDK pulled in, and nothing here needs GameActivity's
# extra surface (it's for games wanting deeper Play Games integration).
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
# D107 Phase 25 Step 4 — runtime shadow-DOM sync (post-hydration state
# changes the Step 3 build-time export couldn't know about). Layer 5 (this
# crate) -> Layer 2 (rosace-core, rosace-web-seo's only dependency) —
# no cycle. wasm32-gated for the same reason as everything else in this
# block: never compiled for iOS/Android/macOS/Windows/Linux.
rosace-web-seo = { path = "../rosace-web-seo" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "CssStyleDeclaration",
    "ImageData", "Performance",
    "MouseEvent", "KeyboardEvent", "Event", "EventTarget",
    # D107 Phase 25 Step 4 — reuses the Declarative Shadow DOM root Step 3's
    # build-time export already attached to #rsc-seo (falls back to
    # attach_shadow if none exists, e.g. `rsc dev` without a build step).
    "ShadowRoot", "ShadowRootInit", "ShadowRootMode",
]
