[package]
name = "rosace-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rosace-trace  = { path = "../rosace-trace" }
rosace-core   = { path = "../rosace-core" }
rosace-layout = { path = "../rosace-layout" }
tiny-skia      = "0.11"
fontdue        = "0.8"
