[package]
name = "rosace-scroll"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rosace-core   = { path = "../rosace-core" }
rosace-state  = { path = "../rosace-state" }
rosace-layout = { path = "../rosace-layout" }
rosace-render = { path = "../rosace-render" }
rosace-trace  = { path = "../rosace-trace" }
