[package]
name = "rosace-shaping"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rosace-core   = { path = "../rosace-core" }
rosace-render = { path = "../rosace-render" }
rosace-text   = { path = "../rosace-text" }
rosace-trace  = { path = "../rosace-trace" }
