[package]
name = "rosace-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rosace-trace = { path = "../rosace-trace" }

# D114/Phase 31 Step 1: real on-disk persistence. `bundled` compiles
# SQLite from source so every platform ships the same version (no system
# libsqlite drift; iOS/Android link it the same way). Target-gated —
# rusqlite links C and doesn't build on wasm32; the web story for the
# `permanent` tier (localStorage/IndexedDB) is a named deferral, see
# src/lib.rs's module doc.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
