[package]
name = "rosace-text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rosace-core   = { path = "../rosace-core" }
rosace-render = { path = "../rosace-render" }
rosace-theme  = { path = "../rosace-theme" }
