[package]
name = "tezzera-animate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
web-time = "1"
tezzera-core  = { path = "../tezzera-core" }
tezzera-state = { path = "../tezzera-state" }
tezzera-trace = { path = "../tezzera-trace" }
