[package]
name = "tezzera-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tzr"
path = "src/main.rs"

[dependencies]
tezzera-trace      = { path = "../tezzera-trace" }
tezzera-core       = { path = "../tezzera-core" }
tezzera-hot-reload = { path = "../tezzera-hot-reload" }
