[package]
name = "tezzera-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[[bin]]
name = "app_showcase"
path = "src/bin/app_showcase.rs"

[[bin]]
name = "animated_counter"
path = "src/bin/animated_counter.rs"

[[bin]]
name = "phase2_demo"
path = "src/bin/phase2_demo.rs"

[[bin]]
name = "nav_demo"
path = "src/bin/nav_demo.rs"

[[bin]]
name = "phase4_demo"
path = "src/bin/phase4_demo.rs"

[[bin]]
name = "phase5_demo"
path = "src/bin/phase5_demo.rs"

[[bin]]
name = "phase6_demo"
path = "src/bin/phase6_demo.rs"

[[bin]]
name = "phase7_demo"
path = "src/bin/phase7_demo.rs"

[[bin]]
name = "phase8_demo"
path = "src/bin/phase8_demo.rs"

[[bin]]
name = "phase9_demo"
path = "src/bin/phase9_demo.rs"

[[bin]]
name = "phase10_demo"
path = "src/bin/phase10_demo.rs"

[[bin]]
name = "phase11_demo"
path = "src/bin/phase11_demo.rs"

[[bin]]
name = "phase12_demo"
path = "src/bin/phase12_demo.rs"

[dependencies]
tezzera         = { path = "../tezzera" }
tezzera-animate = { path = "../tezzera-animate" }
tezzera-state   = { path = "../tezzera-state" }
