[package]
name = "tezzera-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "counter"
path = "src/bin/counter.rs"

[[bin]]
name = "app_showcase"
path = "src/bin/app_showcase.rs"

[[bin]]
name = "animated_counter"
path = "src/bin/animated_counter.rs"

[dependencies]
tezzera         = { path = "../tezzera" }
tezzera-animate = { path = "../tezzera-animate" }
tezzera-state   = { path = "../tezzera-state" }
env_logger      = "0.11"
