[package]
name = "tezzera-nav"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tezzera-animate = { path = "../tezzera-animate" }
tezzera-core    = { path = "../tezzera-core" }
tezzera-state   = { path = "../tezzera-state" }
tezzera-theme   = { path = "../tezzera-theme" }
tezzera-trace   = { path = "../tezzera-trace" }
