[package]
name = "tezzera-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tezzera-core   = { path = "../tezzera-core" }
tezzera-render = { path = "../tezzera-render" }
tezzera-trace  = { path = "../tezzera-trace" }
winit          = "0.30"
softbuffer     = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "ImageData", "Performance",
    "MouseEvent", "KeyboardEvent", "Event", "EventTarget",
]
