[package]
name = "tezzera-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
web-time           = "1"
tezzera-animate    = { path = "../tezzera-animate" }
tezzera-compositor = { path = "../tezzera-compositor" }
tezzera-core       = { path = "../tezzera-core" }
tezzera-render     = { path = "../tezzera-render" }
tezzera-state      = { path = "../tezzera-state" }
tezzera-trace      = { path = "../tezzera-trace" }
log                = "0.4"
winit              = "0.30"
softbuffer         = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "CssStyleDeclaration",
    "ImageData", "Performance",
    "MouseEvent", "KeyboardEvent", "Event", "EventTarget",
]
