[package]
name = "tezzera-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
web-time           = "1"
tezzera-animate    = { path = "../tezzera-animate" }
tezzera-compositor = { path = "../tezzera-compositor" }
tezzera-core       = { path = "../tezzera-core" }
tezzera-render     = { path = "../tezzera-render" }
tezzera-state      = { path = "../tezzera-state" }
tezzera-trace      = { path = "../tezzera-trace" }
log                = "0.4"
winit              = "0.30"
softbuffer         = "0.4"

# Android (D106 Phase 24 Step 3): winit hard-errors on target_os = "android"
# unless one of its android-activity backend features is picked, even though
# tezzera-ffi's JNI-driven Android path never runs winit's own event loop —
# winit is still a transitive dependency for the types tezzera-ffi/
# tezzera-platform share, so it must compile cleanly for the target
# regardless. "native-activity" (not "game-activity") — lighter weight, no
# Google Play Games SDK pulled in, and nothing here needs GameActivity's
# extra surface (it's for games wanting deeper Play Games integration).
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "HtmlCanvasElement", "CanvasRenderingContext2d", "CssStyleDeclaration",
    "ImageData", "Performance",
    "MouseEvent", "KeyboardEvent", "Event", "EventTarget",
]
